--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/open_button"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:onClick="openActivity y" />
+        android:onClick="openActivity" />
 
 
 </RelativeLayout>
