--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,13 @@
         android:layout_centerHorizontal="true"
         android:onClick="openActivity" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView"
+        android:layout_above="@+id/open_button"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
