--- a/app/src/main/res/layout/application_step1.xml
+++ b/app/src/main/res/layout/application_step1.xml
@@ -15,8 +15,7 @@
             android:inputType="textCapWords"
             android:hint="@string/hint_firstname"
             android:id="@+id/txtFirstName"
-            android:layout_weight="0.3"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.3"/>
 
         <EditText
             android:layout_width="0dp"
@@ -24,8 +23,7 @@
             android:inputType="textCapWords"
             android:hint="@string/hint_lastname"
             android:id="@+id/txtLastName"
-            android:layout_weight="0.3"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.3"/>
 
         <EditText
             android:layout_width="0dp"
@@ -33,8 +31,7 @@
             android:inputType="textCapWords"
             android:id="@+id/txtProfession"
             android:hint="@string/hint_profession"
-            android:layout_weight="0.3"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.3"/>
     </LinearLayout>
 
     <LinearLayout
@@ -48,8 +45,7 @@
             android:inputType="textCapWords"
             android:id="@+id/txtCity"
             android:hint="@string/hint_city"
-            android:layout_weight="0.25"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.25"/>
 
         <EditText
             android:layout_width="0dp"
@@ -57,15 +53,13 @@
             android:inputType="textCapWords"
             android:id="@+id/txtStreet"
             android:hint="@string/hint_street"
-            android:layout_weight="0.25"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.25"/>
 
         <Spinner
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/dropProvince"
-            android:layout_weight="0.25"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.25"/>
 
         <EditText
             android:layout_width="0dp"
@@ -73,8 +67,7 @@
             android:inputType="textCapCharacters"
             android:id="@+id/txtPostalCode"
             android:hint="@string/hint_postalcode"
-            android:layout_weight="0.25"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.25"/>
     </LinearLayout>
 
     <LinearLayout
@@ -88,8 +81,7 @@
             android:inputType="phone"
             android:hint="@string/hint_homephone"
             android:id="@+id/txtHomePhone"
-            android:layout_weight="0.5"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.5"/>
 
         <EditText
             android:layout_width="0dp"
@@ -97,8 +89,7 @@
             android:inputType="phone"
             android:hint="@string/hint_workphone"
             android:id="@+id/txtWorkPhone"
-            android:layout_weight="0.5"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.5"/>
     </LinearLayout>
 
     <LinearLayout
@@ -112,8 +103,7 @@
             android:inputType="phone"
             android:hint="@string/hint_mobile"
             android:id="@+id/txtMobile"
-            android:layout_weight="0.5"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.5"/>
 
         <EditText
             android:layout_width="0dp"
@@ -121,14 +111,12 @@
             android:inputType="textEmailAddress"
             android:hint="@string/hint_mail"
             android:id="@+id/txtEmail"
-            android:layout_weight="0.5"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:layout_weight="0.5"/>
     </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/receive_mail"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal" />
@@ -136,15 +124,15 @@
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/interested">
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/radio_yes"
                 android:id="@+id/radioYes"
-                android:layout_gravity="center_horizontal"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
+                android:layout_gravity="center_horizontal"/>
 
             <RadioButton
                 android:layout_width="wrap_content"
@@ -152,7 +140,6 @@
                 android:text="@string/radio_no"
                 android:id="@+id/radioNo"
                 android:checked="true"
-                android:layout_gravity="center_horizontal"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
+                android:layout_gravity="center_horizontal"/>
     </RadioGroup>
 </LinearLayout>
