--- a/app/src/main/res/layout/application_step1.xml
+++ b/app/src/main/res/layout/application_step1.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="60dp">
 
         <EditText
             android:layout_width="0dp"
@@ -37,7 +38,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="60dp">
 
         <EditText
             android:layout_width="0dp"
@@ -73,7 +75,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="60dp">
 
         <EditText
             android:layout_width="0dp"
@@ -95,7 +98,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="60dp">
 
         <EditText
             android:layout_width="0dp"
@@ -119,13 +123,15 @@
         android:layout_height="wrap_content"
         android:text="@string/receive_mail"
         android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="60dp" />
 
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/interested">
+        android:id="@+id/interested"
+        android:orientation="horizontal">
 
             <RadioButton
                 android:layout_width="wrap_content"
